fix: applying review, improving pay auth query and using without sharing

--- a/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
+++ b/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
@@ -1,5 +1,5 @@
 @RestResource(UrlMapping='/authWebhook/v1/*')
-global with sharing class AdyenAuthWebhookHandler {
+global without sharing class AdyenAuthWebhookHandler {
     @HttpPost
     global static String doPost() {
         PaymentAuthorization paymentAuthorization;
@@ -18,7 +18,7 @@ global with sharing class AdyenAuthWebhookHandler {
             }
         } catch (Exception ex) {
             String message = 'an exception happened: ' + ex.getMessage() + '. Stack trace: ' + ex.getStackTraceString();
-            return insertLogAndReturnResponse(message, paymentAuthorization, notificationRequestItem, req.requestBody.toString(), 'Failed');
+            return insertLogAndReturnResponse(message, paymentAuthorization, notificationRequestItem, req.requestBody.toString(), AdyenB2BConstants.PaymentGatewayLogStatus.FAILED);
         }
     }
 
@@ -40,10 +40,12 @@ global with sharing class AdyenAuthWebhookHandler {
                 && isValidId(notificationRequestItem.merchantReference);
     }
 
+    // Salesforce Ids are alphanumeric values containing 15 (case sensitive) or 18 characters (case insensitive)
     private static Boolean isValidId(String idString) {
         return String.isNotBlank(idString) && idString.isAlphanumeric() && (idString.length() == 15 || idString.length() == 18);
     }
 
+    // The PSP Reference number is a alphanumeric value containing 16 characters (https://help.adyen.com/en_US/knowledge/payments/payment-basics/what-is-a-psp-reference-number)
     private static Boolean isValidPspReference(String pspReference) {
         return String.isNotBlank(pspReference) && pspReference.isAlphanumeric() && pspReference.length() == 16;
     }
@@ -51,17 +53,17 @@ global with sharing class AdyenAuthWebhookHandler {
     private static String handlePaymentAuthorizationFound(PaymentAuthorization paymentAuthorization, NotificationRequestItem notificationRequestItem, String requestBody) {
         if (isPaymentPending(paymentAuthorization)) {
             updatePaymentAuthorizationStatus(paymentAuthorization, notificationRequestItem);
-            return insertLogAndReturnResponse(null, paymentAuthorization, notificationRequestItem, requestBody, 'Success');
+            return insertLogAndReturnResponse(null, paymentAuthorization, notificationRequestItem, requestBody, AdyenB2BConstants.PaymentGatewayLogStatus.SUCCESS);
         } else {
-            return insertLogAndReturnResponse('payment is not pending authorization', paymentAuthorization, notificationRequestItem, requestBody, 'NoOp');
+            return insertLogAndReturnResponse('payment is not pending authorization', paymentAuthorization, notificationRequestItem, requestBody, AdyenB2BConstants.PaymentGatewayLogStatus.NOOP);
         }
     }
 
     private static void updatePaymentAuthorizationStatus(PaymentAuthorization paymentAuthorization, NotificationRequestItem notificationRequestItem) {
         if (Boolean.valueOf(notificationRequestItem.success)) {
-            paymentAuthorization.Status = 'Processed';
+            paymentAuthorization.Status = AdyenB2BConstants.PaymentAuthorizationStatus.PROCESSED.name();
         } else {
-            paymentAuthorization.Status = 'Failed';
+            paymentAuthorization.Status = AdyenB2BConstants.PaymentAuthorizationStatus.FAILED.name();
         }
         update paymentAuthorization;
     }
@@ -73,33 +75,33 @@ global with sharing class AdyenAuthWebhookHandler {
     private static String handleMissingPaymentAuthorization(NotificationRequestItem notificationRequestItem, String requestBody) {
         WebCart webCart = findWebCart(notificationRequestItem.merchantReference);
         if (webCart == null) {
-            return '[accepted] but no payment found for this merchant reference';
+            return '[accepted] but no cart found for this merchant reference';
         } else {
-            return insertLogAndReturnResponse('notification marked to be processed later', null, notificationRequestItem, requestBody, 'Initiated');
+            return insertLogAndReturnResponse('notification marked to be processed later', null, notificationRequestItem, requestBody, AdyenB2BConstants.PaymentGatewayLogStatus.INITIATED);
         }
     }
 
     private static PaymentAuthorization findPaymentAuthorization(String pspReference) {
         List<PaymentAuthorization> paymentAuthorizations = [
-                SELECT Status, OrderPaymentSummaryId, PaymentGatewayId
-                FROM PaymentAuthorization
-                WHERE GatewayRefNumber = :pspReference
-                LIMIT 1
+            SELECT Status, OrderPaymentSummaryId, PaymentGatewayId
+            FROM PaymentAuthorization
+            WHERE GatewayRefNumber = :pspReference AND OrderPaymentSummaryId != NULL
+            LIMIT 1
         ];
         return paymentAuthorizations.isEmpty() ? null : paymentAuthorizations[0];
     }
 
     private static WebCart findWebCart(Id webCartId) {
         List<WebCart> webCarts = [
-                SELECT Id
-                FROM WebCart
-                WHERE Id = :webCartId
-                LIMIT 1
+            SELECT Id
+            FROM WebCart
+            WHERE Id = :webCartId
+            LIMIT 1
         ];
         return webCarts.isEmpty() ? null : webCarts[0];
     }
 
-    private static String insertLogAndReturnResponse(String infoMessage, PaymentAuthorization paymentAuthorization, NotificationRequestItem notificationRequestItem, String requestBody, String status) {
+    private static String insertLogAndReturnResponse(String infoMessage, PaymentAuthorization paymentAuthorization, NotificationRequestItem notificationRequestItem, String requestBody, AdyenB2BConstants.PaymentGatewayLogStatus status) {
         PaymentGatewayLog paymentGatewayLog = new PaymentGatewayLog();
         paymentGatewayLog.IsNotification = 'Yes';
         paymentGatewayLog.ReferencedEntityId = paymentAuthorization?.Id;
@@ -113,7 +115,7 @@ global with sharing class AdyenAuthWebhookHandler {
         paymentGatewayLog.GatewayMessage = safeCreateGatewayMessage(infoMessage);
         paymentGatewayLog.Response = paymentGatewayLog.GatewayMessage;
         paymentGatewayLog.InteractionType = 'Authorization';
-        paymentGatewayLog.InteractionStatus = status;
+        paymentGatewayLog.InteractionStatus = status.name();
         insert paymentGatewayLog;
         return paymentGatewayLog.Response;
     }
