--- a/adyen-appexchange/force-app/main/default/classes/AdyenB2BConstants.cls
+++ b/adyen-appexchange/force-app/main/default/classes/AdyenB2BConstants.cls
@@ -11,6 +11,9 @@ public with sharing class AdyenB2BConstants {
     public static final String BANCONTACT_MOBILE_PAYMENT_METHOD_TYPE = 'bcmc_mobile';
     public static final String NOTIFICATION_REQUEST_TYPE_AUTHORISE = 'authorisation';
 
+    public enum PaymentAuthorizationStatus {DRAFT, CANCELED, PENDING, PROCESSED, FAILED}
+    public enum PaymentGatewayLogStatus {NOOP, INITIATED, SUCCESS, FAILED, TIMEOUT}
+
     public static final Map<String,String> ADYEN_PAYMENT_TYPE_TO_SF_TYPE = new Map<String,String>{
             'visa' => 'Visa',
             'amex' => 'American Express',
